--- a/kooplexhub/hub/templates/homehelp.html
+++ b/kooplexhub/hub/templates/homehelp.html
@@ -106,4 +106,4 @@ left: 0;
     </div>
   </div>
 
-  <a class="btn btn-dark"  data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></a>  
+  <a class="btn btn-dark"  data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></span></a>  
