--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -6,7 +6,7 @@
     <li class="nav-item mt-1 ms-1">
       <a class="nav-item" href="/hub/">
         <img src="/static/t_logo-halfcolored.png" width="120" height="30" alt="Kooplex Hub" class="mt-3 d-none d-xl-block" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
-        <img src="/static/t_logo-onlycogwheels.png" width="25" height="auto" alt="Kooplex Hub" class="mt-4 d-block d-xl-none" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
+        <img src="/static/t_logo-onlycogwheels.png" width="25" alt="Kooplex Hub" class="mt-4 d-block d-xl-none" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
       </a>
     </li>
     <li class="mt-4 nav-item" data-toggle="tooltip" title="Environment" data-placement="bottom">
@@ -35,10 +35,10 @@
       <a class="{{ li_a_s }} nav-link {% if menu_monitoring %}active border-1 border-start{% endif %}" href="{% url 'monitoring' %}"><i class="bi bi-activity"></i><span class="d-none d-xl-inline">&nbsp;Monitoring</span></a>
     </li>
     <li class="nav-item mt-2"  data-toggle="tooltip" title="Gitea Version Control System" data-placement="bottom">
-      <a class="{{ li_a_s }} nav-link {% if menu_gitea %}active border-1 border-start{% endif %}" target="_blank" href="https://gitea.vo.elte.hu"><img src="https://gitea.vo.elte.hu/assets/img/logo.svg" width="20"/><span class="d-none d-xl-inline">&nbsp;Gitea</span></a>
+      <a class="{{ li_a_s }} nav-link {% if menu_gitea %}active border-1 border-start{% endif %}" target="_blank" href="https://gitea.vo.elte.hu"><img src="https://gitea.vo.elte.hu/assets/img/logo.svg" width="20" alt="gitea"><span class="d-none d-xl-inline">&nbsp;Gitea</span></a>
     </li>
     <li class="nav-item mt-2"  data-toggle="tooltip" title="Seafile Cloud Filesharing" data-placement="bottom">
-      <a class="{{ li_a_s }} nav-link {% if menu_seafile %}active border-1 border-start{% endif %}" target="_blank" href="https://seafile.vo.elte.hu"><img src="https://manual.seafile.com/media/seafile-transparent-1024.png" width="20"/><span class="d-none d-xl-inline">&nbsp;Seafile</span></a>
+      <a class="{{ li_a_s }} nav-link {% if menu_seafile %}active border-1 border-start{% endif %}" target="_blank" href="https://seafile.vo.elte.hu"><img src="https://manual.seafile.com/media/seafile-transparent-1024.png" width="20" alt="seafile"><span class="d-none d-xl-inline">&nbsp;Seafile</span></a>
     </li>
     <li class="nav-item mt-2"  data-toggle="tooltip" title="Dear Kooplex users! We are interested in your opinion about Kooplex in order to improve our platform. Our team would appreciate if you could have five minutes to answer this quick and anonymous questionnaire" data-placement="bottom">
       <a class="btn btn-outline-light pe-2 {{ li_a_s }} nav-link blink" href="https://forms.gle/cJ52qSQNN8kUKXpL9" target="_blank"><i class="bi bi-card-heading"></i><span class="d-none d-xl-inline">&nbsp;Our survey</span></a>
