--- a/kooplexhub/project/templates/reports_button.html
+++ b/kooplexhub/project/templates/reports_button.html
@@ -1,3 +1,7 @@
+{# FIXME: REFACTOR ME!!! #}
+
+
+
 {% if project.reports|length > 0 %}
 <div class="dropdown" data-bs-toggle="tooltip" data-bs-placement="top" title="Reports related to project {{ project.name }}">
   <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="dc-reports-{{ project.id }}" data-bs-toggle="dropdown" aria-expanded="false">
