--- a/kooplexhub/report/templates/reporthelp.html
+++ b/kooplexhub/report/templates/reporthelp.html
@@ -1,18 +1,3 @@
-{# fixme #}
-<style>
-.myoverlaybase {
-position: relative;
-}
-.myoverlay {
-position: absolute;
-top: 0;
-left: 0;
-}
-.carousel-indicators {
-        bottom: -4.2375rem;
-    }
-</style>
-
 <div class="modal fade modal-lg row" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
   <div  class="col-3">
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -27,7 +12,7 @@ left: 0;
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
-<div id="carouselExampleIndicators" id="carouselExampleIndicators" data-ride="carousel" class="carousel slide" data-interval="0">
+<div id="carouselExampleIndicators" data-ride="carousel" class="carousel slide" data-interval="0">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -91,6 +76,6 @@ left: 0;
   </div>
 
 
-  <a class="btn btn-dark" data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></a>  
+  <a class="btn btn-dark" data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></span></a>  
 
 
