--- a/kooplexhub/hub/templates/monitoring.html
+++ b/kooplexhub/hub/templates/monitoring.html
@@ -41,14 +41,14 @@
   <div id="simple">
   </div>
   <div id="simple">
-    <!--div class="row">
+    <div class="row">
     	<iframe src="https://monitoring.vo.elte.hu/grafana/d/ZhxFwBz4k/node-overview-simple-rows?orgId=1&from=1659610945771&to=1659614545772"	height="600" width="1100" frameborder="0"></iframe>
     </div>
   </div>
   <div id="all">
     <div class="row">
     	<iframe src="https://monitoring.vo.elte.hu/grafana/d/aE-v7Bk4z/node-overview?orgId=1&refresh=5m&from=1659611026026&to=1659614626026"	height="600" width="1100" frameborder="0"></iframe>
-    </div-->
+    </div>
   </div>
 {% endblock %}
 </div>
